Implementacao do SJB

--- a/ep1/Makefile
+++ b/ep1/Makefile
@@ -1,14 +1,12 @@
 CC=gcc
 CFLAGS=-Wall -pedantic -g
-READLINE=-lreadline
 
 all: ep1
 
-ep1: process.o ep1.o
-	${CC} ${CFLAGS} -o ep1 
+scheduler: process.c file_utils.c
+	${CC} ${CFLAGS} -o scheduler process.o file_utils.o ep1.o
 
-process.o: process.c process.h
 
-ep1.o: ep1.c
+# ep1.o: ep1.c
 
-clean: rm ep1 ep1sh *.o
+# clean: rm ep1 ep1sh *.o
